--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "author": "Advait Trivedi",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
@@ -27,12 +28,13 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
-    "mongoose": "^8.0.4",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.4"
   }
 }
