--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/graphql-errors": "^2.1.7",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.0",
     "typescript": "^5.3.3"
@@ -33,6 +34,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "graphql-errors": "^2.1.0",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4"
