--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "file-saver": "^2.0.5",
     "firebase": "^10.8.0",
     "js-file-download": "^0.4.12",
     "react": "^18.2.0",
